
SVN
-------------------------------

XML:   Resolved issue CASTOR-1561 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Enabled checkstyle for javasource package and fixed most of the warnings.
       Details: http://jira.codehaus.org/browse/CASTOR-1561
       (Ralf - 20060916)

XML:   Resolved issue CASTOR-1557 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Moved java.util.Iterator-specific code from CollectionInfo to CollectionInfoJ2.
       Details: http://jira.codehaus.org/browse/CASTOR-1557
       (Ralf - 20060916)

XML:   Resolved issue CASTOR-1560 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Thorough JavaDoc update for javasource package.
       Details: http://jira.codehaus.org/browse/CASTOR-1560
       (Ralf - 20060916)

All:   Resolved issue CASTOR-1559 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed 90 warnings at generation of API JavaDoc.
       Details: http://jira.codehaus.org/browse/CASTOR-1559
       (Ralf - 20060916)

All:   Resolved issue CASTOR-1558 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Fixed javadoc package-summary links and added classpath to javadoc build.
       Details: http://jira.codehaus.org/browse/CASTOR-1558
       (Ralf - 20060915)

XML:   Resolved issue CASTOR-1552 using contribution from Steven Dolg [stevendolg@gmx.at]
       Refactored CollectionInfo* classes, incl. changes to names of methods generated.
       Details: http://jira.codehaus.org/browse/CASTOR-1552
       (Werner - 20060915)

All:   Resolved issue CASTOR-1556 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Correct HTML tags and grammar in package.html files.
       Details: http://jira.codehaus.org/browse/CASTOR-1556
       (Ralf - 20060915)

XML:   Resolved issue CASTOR-1549 using contribution from Paul Philion [philion@gmail.com]