@@ -29,6 +29,26 @@
             <managed-by>Werner Guttmann</managed-by>
             <summary></summary>
             <bugs>
+				<bug id="1550" tool="jira">
+                    <description>
+		                Fixed issue with self-sufficiency of XML JAR:
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Uwe Langbecker</name>
+                        <email>Uwe.Langbecker@gl-group.com</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>XML</module>
+                    <date>20060916</date>
+                </bug>
 				<bug id="1561" tool="jira">
                     <description>
 		                Enabled checkstyle for javasource package and fixed most of the warnings.
