@@ -182,9 +182,9 @@ org.exolab.castor.persist.useProxies=false
 #
 # MappingLoader implementations
 #
-org.castor.mapping.Loaders=\
-  org.exolab.castor.jdo.engine.JDOMappingLoader,\
-  org.exolab.castor.xml.XMLMappingLoader
+org.castor.mapping.loaderFactories=\
+  org.castor.mapping.JDOMappingLoaderFactory,\
+  org.castor.mapping.XMLMappingLoaderFactory
   
 # 
 # Cache implementations
